--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,7 @@
 RABBIT_HOST=181.79.9.72
 RABBIT_USER=admin
 RABBIT_PASSWORD=admin123
+RABBIT_QUEUE=fileToProcess
 RABBIT_PORT=6457
 PORT=12345
 MYSQL_URL=jdbc:mysql://181.79.9.72:6446/Archivos?useSSL=false
